# Lineage

./: .gitignore  Makefile  README.md
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_auth_tables.py
apps/api/src/: config.py  database.py  main.py
apps/api/src/agent/: graph.py  state.py
apps/api/src/agent/nodes/: generate_feedback.py  match_patterns.py  parse_diff.py  publish_review.py  retrieve_memory.py
apps/api/src/api/: analytics.py  auth.py  repositories.py  reviews.py  stream.py
apps/api/src/core/: dependencies.py  rate_limit.py  redis.py  security.py
apps/api/src/github/: client.py
apps/api/src/integrations/github/: app.py  diff_parser.py  oauth.py
apps/api/src/llm/: __init__.py  gemini.py
apps/api/src/memory/: client.py  embeddings.py  retrieval.py
apps/api/src/models/: __init__.py  auth.py  base.py  pull_request.py  repository.py  review_comment.py
apps/api/src/observability/: logging.py  metrics.py
apps/api/src/schemas/: auth.py  pr.py  review.py
apps/api/src/services/: __init__.py  audit_service.py  auth_service.py  repositories.py  reviews.py
apps/api/src/webhooks/: router.py  schemas.py  signature.py
apps/api/src/workers/: celery_app.py  github_token.py
apps/api/src/workers/tasks/: review.py  signals.py
apps/api/tests/: conftest.py  test_agent.py  test_memory.py  test_webhooks.py
apps/web/: .dockerignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(dashboard)/: DashboardGate.tsx  layout.tsx
apps/web/app/(dashboard)/dashboard/: DashboardClient.tsx  page.tsx
apps/web/app/about/: page.tsx
apps/web/app/dashboard/: DashboardClient.tsx  page.tsx
apps/web/components/auth/: AuthModalProvider.tsx  GithubMark.tsx  LoginModal.tsx
apps/web/components/dashboard/: ActivityFeed.tsx  DashboardShell.tsx  DashboardSkeleton.tsx  MobileBar.tsx  NavItem.tsx  Panel.tsx  RepoEmpty.tsx  SectionHeader.tsx  Sidebar.tsx  SignInGate.tsx  StatCard.tsx  UserPod.tsx  nav-config.ts
apps/web/components/landing/: Cta.tsx  Features.tsx  Footer.tsx  Hero.tsx  LogoMark.tsx  Marquee.tsx  Nav.tsx  Preview.tsx  Process.tsx  Reveal.tsx  ShaderBackdrop.tsx  SideGrid.tsx  SmoothScroll.tsx
apps/web/components/providers/: QueryProvider.tsx
apps/web/components/ui/: shader-lines.tsx
apps/web/hooks/: useUser.ts
apps/web/lib/: api.ts  auth.ts
infra/: .env.example  docker-compose.dev.yml  docker-compose.yml  prometheus.yml
