[project]
name = "lineage-api"
version = "0.1.0"
description = "Lineage FastAPI backend: GitHub webhook receiver, LangGraph PR review agent, Celery workers."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "httpx>=0.28",
    "langgraph>=0.2.50",
    "langchain-core>=0.3",
    "qdrant-client>=1.12",
    "google-genai>=0.8",
    "unidiff>=0.7.5",
    "PyGithub>=2.5",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "sse-starlette>=2.1",
    "tenacity>=9.0",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "testcontainers[postgres,redis]>=4.8",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
