[project]
name = "lineage-api"
version = "0.1.0"
description = "Lineage FastAPI backend: GitHub webhook receiver, LangGraph PR review agent, Celery workers."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[asyncio]>=2.0.50",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "psycopg[binary]>=3.3.4",
    "celery[redis]>=5.6.3",
    "redis>=6.4.0",
    "httpx>=0.28.1",
    "langgraph>=1.2.2",
    "langchain-core>=1.4.0",
    "qdrant-client>=1.18.0",
    "google-genai>=2.6.0",
    "unidiff>=0.7.5",
    "PyGithub>=2.9.1",
    "structlog>=25.5.0",
    "prometheus-client>=0.25.0",
    "sse-starlette>=3.4.4",
    "tenacity>=9.1.4",
    "orjson>=3.11.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "testcontainers[postgres,redis]>=4.13.3",
    "ruff>=0.15.14",
    "mypy>=2.1.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
